tests/errors/generic_unknown_template.ptt
// Instantiating a generic type that doesn't exist as a template
// must error rather than silently produce a missing symbol.
spark {
  // No `Foo<T>` defined anywhere — must be a compile error.
  x is Foo<int>()
  yell(0)
}
